# mcp-security-scanner

./: .gitignore  DISCLAIMER.md  Dockerfile  README.md  config.py  mcp_auth_security.py  mcp_scanner.py  pyproject.toml  report.py  requirements.txt
.github/workflows/: ci-cd.yml
config/: config.yaml
src/: cli.py  cli_v2.py  compliance_mapping.py  data_exfil.py  mcp_auth.py  output.py  rate_limiting.py  secrets_detection.py  server_fingerprint.py  supply_chain.py  tool_sandbox.py
tests/: test_mcp_auth.py  test_mcp_auth_security.py  test_sandbox.py  test_scanner.py  test_secrets_detection.py  test_server_fingerprint.py  test_supply_chain.py
