[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-scanner"
version = "2.1.0"
description = "Comprehensive security scanner for Model Context Protocol (MCP) servers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ahmed Chiboub", email = "ahmed.chiboub@cybacrest.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-security-scanner = "cli:main"

[project.urls]
Homepage = "https://github.com/Cybathreat/mcp-security-scanner"
Issues = "https://github.com/Cybathreat/mcp-security-scanner/issues"
